@@ -35,7 +35,6 @@ import java.io.IOException;
 import com.sun.btrace.org.objectweb.asm.ClassReader;
 import com.sun.btrace.org.objectweb.asm.ClassWriter;
 import com.sun.btrace.BTraceRuntime;
-import com.sun.btrace.BTraceUtils;
 import com.sun.btrace.CommandListener;
 import com.sun.btrace.comm.ErrorCommand;
 import com.sun.btrace.comm.ExitCommand;
@@ -44,10 +43,7 @@ import com.sun.btrace.comm.OkayCommand;
 import com.sun.btrace.comm.RenameCommand;
 import com.sun.btrace.PerfReader;
 import com.sun.btrace.comm.RetransformationStartNotification;
-import com.sun.btrace.runtime.BTraceProbe;
-import com.sun.btrace.runtime.ClassFilter;
-import com.sun.btrace.runtime.Instrumentor;
-import com.sun.btrace.runtime.InstrumentUtils;
+import com.sun.btrace.runtime.*;
 import com.sun.btrace.util.templates.impl.MethodTrackingExpander;
 import java.io.BufferedWriter;
 import java.io.File;
@@ -92,6 +88,7 @@ abstract class Client implements CommandListener {
     protected final DebugSupport debug;
     private final BTraceTransformer transformer;
 
+    private volatile boolean initialized = false;
     private volatile boolean shuttingDown = false;
 
     static {
@@ -107,7 +104,7 @@ abstract class Client implements CommandListener {
         ClassCache.class.getClassLoader();
         ClassInfo.class.getClassLoader();
 
-        BTraceRuntime.init(createPerfReaderImpl(), new RunnableGeneratorImpl());
+        BTraceRuntime.init(createPerfReaderImpl());
     }
 
     Client(ClientContext ctx) {
@@ -119,12 +116,18 @@ abstract class Client implements CommandListener {
         this.settings = s != null ? s : SharedSettings.GLOBAL;
         this.transformer = t;
         this.debug = new DebugSupport(settings);
+
         setupWriter();
     }
 
+    protected final void initialize() {
+        initialized = true;
+    }
+
+    @SuppressWarnings("DefaultCharset")
     protected final void setupWriter() {
         String outputFile = settings.getOutputFile();
-        if (outputFile == null || outputFile.equals("::null")) return;
+        if (outputFile == null || outputFile.equals("::null") || outputFile.equals("/dev/null")) return;
 
         if (!outputFile.equals("::stdout")) {
             String outputDir = settings.getOutputDir();
@@ -154,7 +157,10 @@ abstract class Client implements CommandListener {
 
     private void startFlusher() {
         int flushInterval;
-        String flushIntervalStr = System.getProperty("com.sun.btrace.FileClient.flush", "5");
+        String flushIntervalStr = System.getProperty("io.btrace.FileClient.flush");
+        if (flushIntervalStr == null) {
+            flushIntervalStr = System.getProperty("com.sun.btrace.FileClient.flush", "5");
+        }
         try {
             flushInterval = Integer.parseInt(flushIntervalStr);
         } catch (NumberFormatException e) {
@@ -228,6 +234,8 @@ abstract class Client implements CommandListener {
 
     protected synchronized void onExit(int exitCode) {
         if (!shuttingDown) {
+            out.flush();
+
             BTraceRuntime.leave();
             try {
                 debugPrint("onExit:");
@@ -256,12 +264,20 @@ abstract class Client implements CommandListener {
     }
 
     protected final Class loadClass(InstrumentCommand instr) throws IOException {
+        return loadClass(instr, true);
+    }
+
+    protected final Class loadClass(InstrumentCommand instr, boolean canLoadPack) throws IOException {
         String[] args = instr.getArguments();
         this.btraceCode = instr.getCode();
         try {
-            probe = load(btraceCode);
-            if (!probe.isVerified()) {
-                throw probe.getVerifierException();
+            probe = load(btraceCode, canLoadPack);
+            if (probe == null) {
+                return null;
+            }
+
+            if (!settings.isTrusted()) {
+                probe.checkVerified();
             }
         } catch (Throwable th) {
             debugPrint(th);
@@ -336,6 +352,10 @@ abstract class Client implements CommandListener {
     }
 
     // package privates below this point
+    final boolean isInitialized() {
+        return initialized;
+    }
+
     final void infoPrint(String msg) {
         DebugSupport.info(msg);
     }
@@ -393,26 +413,30 @@ abstract class Client implements CommandListener {
     }
 
     // Internals only below this point
-    private BTraceProbe load(byte[] buf) {
-        BTraceProbeFactory f = new BTraceProbeFactory(settings);
+    private BTraceProbe load(byte[] buf, boolean canLoadPack) {
+        BTraceProbeFactory f = new BTraceProbeFactory(settings, canLoadPack);
         debugPrint("loading BTrace class");
         BTraceProbe cn = f.createProbe(buf);
 
-        if (isDebug()) {
-            if (cn.isVerified()) {
-                debugPrint("loaded '" + cn.getClassName() + "' successfully");
-            } else {
-                debugPrint(cn.getClassName() + " failed verification");
+        if (cn != null) {
+            if (isDebug()) {
+                if (cn.isVerified()) {
+                    debugPrint("loaded '" + cn.getClassName() + "' successfully");
+                } else {
+                    debugPrint(cn.getClassName() + " failed verification");
+                    return null;
+                }
             }
         }
-        return cn;
+        return BTraceProbePersisted.from(cn);
     }
 
+    @SuppressWarnings("LiteralClassName")
     private static PerfReader createPerfReaderImpl() {
         // see if we can access any jvmstat class
         try {
             if (Client.class.getResource("sun/jvmstat/monitor/MonitoredHost.class") != null) {
-                return (PerfReader) Class.forName("com.sun.btrace.agent.PerfReaderImpl").newInstance();
+                return (PerfReader) Class.forName("com.sun.btrace.agent.PerfReaderImpl").getDeclaredConstructor().newInstance();
             }
         } catch (Exception exp) {
             // can happen if jvmstat is not available
